tests/ui/refutable_pattern_in_let.ina
// COMPILE_FAIL

type T = A | B
type T2 = A

fn main() {
    // ok
    let T2::A = T2::A;
    // error
    let T::A = T::B;
}
